--- a/src/ctpv/CTPV.form
+++ b/src/ctpv/CTPV.form
@@ -4,6 +4,7 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="CTPV"/>
+    <Property name="extendedState" type="int" value="1"/>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[820, 608]"/>
     </Property>
